--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <title>CHU JI HYUN</title>
-    <link rel="stylesheet" type="text/css" href="/assets/fullPage/jquery.fullPage.css" />
+    <link rel="stylesheet" type="text/css" href="/work/assets/fullPage/jquery.fullPage.css" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="/assets/fullPage/jquery.fullPage.js"></script>
+    <script type="text/javascript" src="/work/assets/fullPage/jquery.fullPage.js"></script>
 </head>
 </html>
