--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>CHU JI HYUN</title>
     <link rel="stylesheet" type="text/css" href="/work/assets/fullPage/jquery.fullPage.css" />
-    <script src="/work/assets/jquery.min.js"></script>
+    <script src="/work/assets/jquery-3.3.1.min.js"></script>
     <script src="/work/assets/jquery-ui.min.js"></script>
     <script type="text/javascript" src="/work/assets/fullPage/jquery.fullPage.js"></script>
 </head>
