--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html>
 <head>
     <title>CHU JI HYUN</title>
-    <link rel="stylesheet" type="text/css" href="/work/assets/fullPage/jquery.fullPage.css" />
-    <script src="/work/assets/jquery-3.3.1.min.js"></script>
-    <script src="/work/assets/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="/work/assets/fullPage/jquery.fullPage.js"></script>
+    <link rel="stylesheet" type="text/css" href="./assets/fullPage/jquery.fullPage.css" />
+    <script src="./assets/jquery-3.3.1.min.js"></script>
+    <script src="./assets/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="./assets/fullPage/jquery.fullPage.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="./css/index.css" />
 </head>
 
 <body>
-
     <script type="text/javascript">
         $(document).ready(function() {
             $('#fullpage').fullpage({
@@ -17,7 +18,9 @@
             });
         });
     </script>
-
+    <div class="header">
+        header
+    </div>
     <div id="fullpage">
         <div class="section active" id="section0"><h1>fullPage.js</h1></div>
         <div class="section" id="section1">
